--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 main {
-  margin: 50px 5px 5px;
+  margin: 70px 5px 5px;
 }
 
 @media only screen and (max-width: 383px) {
@@ -47,7 +47,7 @@ nav a {
   font-size: 0.99rem;
   color: inherit;
   text-align: center;
-  padding: 14px 16px;
+  padding: 25px 16px;
 }
 
 .dropdown {
@@ -60,7 +60,7 @@ nav a {
   font-size: 0.99rem;
   border: none;
   outline: none;
-  padding: 14px 16px;
+  padding: 25px 16px;
   color: inherit;
   background-color: inherit;
   font-family: inherit;
@@ -83,7 +83,7 @@ nav a:hover,
 .dropdown-content a {
   float: none;
   color: white;
-  padding: 12px 16px;
+  padding: 25px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
@@ -95,6 +95,11 @@ nav a:hover,
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+#about {
+  padding: 300px 0;
+  line-height: 3;
 }
 
 h1 {
@@ -111,12 +116,18 @@ h1 {
 #movies,
 #shows,
 #games {
-  margin-top: 50px;
   padding-top: 50px;
+  margin-top: 250px;
+}
+
+#games {
+  padding-bottom: 100px;
 }
 
 #interests p {
-  margin-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 200px;
+  line-height: 3;
 }
 
 .line-divider {
