--- a/styles.css
+++ b/styles.css
@@ -183,10 +183,14 @@ h1 {
   text-align: center;
 }
 
-#albums img {
+#albums img,
+#anime img,
+#movies img,
+#shows img,
+#games img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 #artists img {
@@ -194,30 +198,6 @@ h1 {
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
-}
-
-#anime img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-#movies img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-#shows img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-#games img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
 }
 
 #albums .grid,
@@ -236,7 +216,6 @@ h1 {
 #games .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-  grid-template-rows: auto;
   row-gap: 75px;
   margin: 0 auto;
   justify-items: center;
@@ -264,6 +243,8 @@ h1 {
 }
 .header {
   grid-area: header;
+  display: flex;
+  align-items: flex-start; /* Add this line */
 }
 
 .wrapper {
